--- a/app/src/main/res/layout/fragment_home_resources.xml
+++ b/app/src/main/res/layout/fragment_home_resources.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/refreshView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v4.widget.SwipeRefreshLayout android:id="@+id/refreshView"
+                                              xmlns:android="http://schemas.android.com/apk/res/android"
+                                              android:layout_width="match_parent"
+                                              android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -10,5 +10,6 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingBottom="6dp"
-        android:paddingTop="6dp" />
+        android:paddingTop="6dp"
+        android:scrollbars="vertical"/>
 </android.support.v4.widget.SwipeRefreshLayout>
