完善 资源详情页面

--- a/app/src/main/res/layout/layout_resource_item.xml
+++ b/app/src/main/res/layout/layout_resource_item.xml
@@ -7,4 +7,5 @@
     android:lines="1"
     android:paddingBottom="3dp"
     android:paddingTop="3dp"
-    android:textAppearance="?attr/textAppearanceListItem" />
+    android:textColor="#333"
+    android:textSize="13sp" />
