--- a/app/src/main/res/layout/fragment_search_resource_detail.xml
+++ b/app/src/main/res/layout/fragment_search_resource_detail.xml
@@ -23,7 +23,7 @@
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/color_magnet_link"
             android:textSize="15sp" />
 
         <LinearLayout
