--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,11 +10,11 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        app:tabIndicatorColor="@android:color/white"
-        app:tabSelectedTextColor="@android:color/white"
+        android:background="@color/colorGray"
+        app:tabIndicatorColor="@color/colorPrimary"
+        app:tabSelectedTextColor="@color/colorPrimary"
         app:tabTextAppearance="@style/TabItemTextAppearance"
-        app:tabTextColor="@android:color/white" />
+        app:tabTextColor="#333" />
 
     <com.github.xtorrent.xtorrent.widget.PagingEnabledViewPager
         android:id="@+id/viewPager"
