--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,7 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/headerImageView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:contentDescription="@null" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/headerImageView"
+        android:background="#f6f6f6" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/headerImageView"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="-50dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/titleView"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#b3ffffff"
+            android:gravity="center_vertical"
+            android:paddingLeft="16dp"
+            android:textColor="#333"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorWhite"
+            android:clipChildren="false"
+            android:orientation="vertical"
+            android:paddingTop="16dp">
+
+            <com.github.xtorrent.xtorrent.movie.view.LoopViewPager
+                android:id="@+id/picturesViewPager"
+                android:layout_width="match_parent"
+                android:layout_height="230dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
+                android:clipChildren="false" />
+
+            <com.viewpagerindicator.CirclePageIndicator xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/picturesIndicator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:fillColor="@color/colorPrimary"
+                app:pageColor="@color/colorGray"
+                app:radius="5dp"
+                app:strokeColor="#40FFFFFF"
+                app:strokeWidth="0.5dp" />
+
+            <!--<WebView-->
+            <!--android:id="@+id/webView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_marginTop="16dp" />-->
+        </LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
