--- a/app/src/main/res/menu/menu_navigation_items.xml
+++ b/app/src/main/res/menu/menu_navigation_items.xml
@@ -27,7 +27,8 @@
         <item
             android:id="@+id/settings"
             android:icon="@drawable/ic_settings_black_24dp"
-            android:title="@string/drawer_menu_settings" />
+            android:title="@string/drawer_menu_settings"
+            android:visible="false" />
 
         <item
             android:id="@+id/feedback"
