--- a/app/src/main/res/menu/menu_navigation_items.xml
+++ b/app/src/main/res/menu/menu_navigation_items.xml
@@ -17,7 +17,8 @@
         <item
             android:id="@+id/movie"
             android:icon="@drawable/ic_movie_black_24dp"
-            android:title="@string/drawer_menu_movies" />
+            android:title="@string/drawer_menu_movies"
+            android:visible="false" />
     </group>
 
     <group
