修改 放开 电影 项

--- a/app/src/main/res/menu/menu_navigation_items.xml
+++ b/app/src/main/res/menu/menu_navigation_items.xml
@@ -17,8 +17,7 @@
         <item
             android:id="@+id/movie"
             android:icon="@drawable/ic_movie_black_24dp"
-            android:title="@string/drawer_menu_movies"
-            android:visible="false" />
+            android:title="@string/drawer_menu_movies" />
     </group>
 
     <group
