--- a/app/src/main/res/layout/fragment_search_resource_detail.xml
+++ b/app/src/main/res/layout/fragment_search_resource_detail.xml
@@ -259,5 +259,15 @@
                     android:orientation="vertical" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="6dp"
+            android:layout_marginTop="12dp"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id" />
     </LinearLayout>
 </ScrollView>
