--- a/app/src/main/res/layout/layout_loading_more.xml
+++ b/app/src/main/res/layout/layout_loading_more.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<me.zhanghai.android.materialprogressbar.MaterialProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Widget.MaterialProgressBar.ProgressBar.NoPadding"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:layout_marginBottom="6dp"
-    android:layout_marginTop="6dp"
-    android:indeterminate="true" />
+    android:orientation="vertical">
+
+    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+        style="@style/Widget.MaterialProgressBar.ProgressBar.NoPadding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="6dp"
+        android:layout_marginTop="6dp"
+        android:indeterminate="true" />
+
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="6dp"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/loading_ad_unit_id" />
+</LinearLayout>
