--- a/app/src/main/res/menu/menu_navigation_items.xml
+++ b/app/src/main/res/menu/menu_navigation_items.xml
@@ -18,7 +18,7 @@
             android:id="@+id/movie"
             android:icon="@drawable/ic_movie_black_24dp"
             android:title="@string/drawer_menu_movies"
-            android:visible="false" />
+            android:visible="@bool/show_movie_item" />
     </group>
 
     <group
